  the join predicate(s) using array indexes, instead allow them to be specified
  using a hash of field names, as in traditional Bloom joins. This only works
  when the lset contains Structs.
* Remove lset#project, and allow lset#eqjoin to take zero predicates; in the
  latter case, eqjoin computes the Cartesian product.
* Support deletion rules (<-) with lattice values on the RHS
* Optimize notin self joins
* Improve error reporting for syntax errors on temp collections (#310)

== 0.9.6 / 2013-02-25

* Support syntax sugar for initializing lattices (#294). For example, rather
  than writing "foo <= Bud::MaxLattice.new(2)", you can now just write "foo <=
  2". Note that, due to a bug in the superator gem, you cannot use this syntax
  with the <+ operator.
* Allow nested lattice values to be sent over channels (#295, patch from Josh
  Rosen). Lattice values could previously be sent as a field value in a tuple
  delivered over a channel, but they could not be embedded arbitrarily deeply
  within tuples (e.g., lattices nested within an array could not previously be
  sent as a field value).
* Support "Comparable" for Bud::Lattice values
* Add support for lattices to rebl
* Reject attempts to insert into stdio via <+ (#288)
* Restore functionality of reading from stdio (i.e., stdin) with MRI 1.9
* Improve MRI 1.8 compatibility
* Require ruby_parser >= 3.1.0
* Fix bug in bootstrap blocks for lattice values
* Fix bug in rescan/invalidation for rules that reference lattice values and use
  the <+ or <~ operators (#290)
* Fix bug in rescan logic for notin operator (#291)
* Fix bug in notin operators involving self joins (#298)
* Fix error when output from a notin operator was fed into a lattice

== 0.9.5 / 2012-11-24

* Lattice branch (Bloom^L) merged
* Compatibility with recent versions of ruby_parser (3.0.2+) and ruby2ruby
  (2.0.1+). Older versions of these two gems are no longer supported
* Add support for aggregate functions that take multiple input columns